[tool.poetry]
name = "Ujcatapi"
version = "0.0.1"
description = "TELUS International AI Cat Management Service"
authors = ["TELUS International AI Dev Team <devs@lionbridgeai.com>"]

[tool.poetry.dependencies]
python = "^3.9.6"
fastapi = "^0.68.1"
uvicorn = "^0.14.0"
httpx = {version = "^0.18.2", extras = ["http2"]}
sentry-sdk = "^1.3.1"
ai-event-pubsub = {git = "https://github.com/lionbridgeai/ai-event-pubsub", rev = "0.0.4"}
motor = "^2.5"
elastic-apm = "^6.2.3"
dnspython = "^2.2.1"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
flake8 = "^3.9.2"
isort = "^5.9.1"
black = "^21.6b0"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-watch = "^4.2.0"
pytest-asyncio = "^0.15.1"
requests = "^2.25.1"

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
# make it compatible with black:
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
